--- a/views/sos.ejs
+++ b/views/sos.ejs
@@ -186,7 +186,7 @@
     .distT2{
         margin-top: 9vh;
         color: white;
-        /* visibility: hidden; */
+        visibility: hidden;
         position: absolute;
 
         right:22vw;
