--- a/views/agency.ejs
+++ b/views/agency.ejs
@@ -59,7 +59,7 @@
         } */
 
         #content {
-            width: 30vw;
+            width: 50vw;
             background-color: #111;
             display: flex;
             flex-direction: column;
@@ -67,23 +67,52 @@
             align-items: center;
             font-size: 3vh;
         }
+        .agents {
+            width: 50vw;
+            display: flex;
+            flex-direction: row;
+            flex-wrap: wrap;
+            align-content: center;
+            justify-content: center;
+            gap: 2vw;
+        }
+        .agent {
+            width: fit-content;
+            display: flex;
+            flex-direction: column;
+            padding: 2vh;
+            background: #fd532f;
+            color: #000;
+            border-radius: 5px;
+        }
     </style>
     <%- include ./components/navLanding %>
 
-    <% if (userdata.hasPlan===true) { %>
+    <% if (reqAgency) { %>
         <div id="main">
                 <div id="content">
 
                     Here's your agency pass code. <span style="color: #fd532f;">Keep it secret</span> and share only with
                     your spaceguys.
                     <div>
-                        <pre id="code"><%= userdata.userid %></pre>
+                        <pre id="code" style="font-family: 'Space Grotesk'; font-weight: 600;"><%= reqAgency.id %></pre>
                     </div>
                 </div>
-            </div>
-            <% } %>
+                
+                <h1>Your agents</h1>
+                <% if (!reqAgency.registeredAgents) { %>
+                    <p>You don't have any registered agents currently</p>
+                <% } %>
+                <div class="agents">
+                        <% for (let i = 0; i < reqAgency.registeredAgents.length; i++) { %>
+                            <div class="agent"><%= reqAgency.registeredAgents[i] %></div>
+                            <% } %>
+                        </div>
+                    </div>
 
-        <% if (userdata.hasPlan===false) { %>
+        <% } %>
+
+        <% if (!reqAgency) { %>
             <div id="main">
                 <h1>Buy Agency Pass</h1>
                 <form action="/agency/buy" method="post">
@@ -91,12 +120,7 @@
                         your spaceguy with
                         access to all the features we have to offer.</p>
                     <button>Buy a pass</button>
-                    <p>
-                        Already have a pass from your agency? <br>
-                        <a href="/spaceguy/code">Enter it here.</a>
-                    </p>
                 </form>
 
             </div>
-            <% } %>
-                </div>
+        <% } %>
