--- a/views/spaceguy.ejs
+++ b/views/spaceguy.ejs
@@ -167,7 +167,10 @@
                     </div>
                     <div class="dash-card-1">
                         <a href="/spaceguy/ai"><button class="outlined">Talk to AI Companion</button></a>
-                    </div>            
+                    </div>
+                    <div class="dash-card-1">
+                        <a href="/spaceguy/todo"><button class="outlined">Agency Tasks</button></a>
+                    </div>
                 </div>
                 <div id="sos">
                     <a href="/spaceguy/sos">
