--- a/views/spaceguy.ejs
+++ b/views/spaceguy.ejs
@@ -144,8 +144,8 @@
                     
                     <div id="mission">
                         <h2 style="color: #fd532f; ">Mission Details</h2>
-                        <p>Information not yet provided by agency. Please contact your agent and ask for a description of the mission.</p>
-                        <a href="/spaceguy/tracker" style="color: #fd532f; text-decoration: none;">Track this vessel &rarr;</a>
+                        <p><%= spaceGuy.mission %></p>
+                        <a href="/spaceguy/tracker" style="color: #fd532f; text-decoration: none;">Track Arni Tracker &rarr;</a>
                     </div>
                     
                     <div id="vessel">
