--- a/views/tracker.ejs
+++ b/views/tracker.ejs
@@ -72,7 +72,7 @@
         <div id="map"></div>
         <div id="info-panel">
             <nav><a style="text-decoration: none; color: #fff;" href="/spaceguy">&#9664; Back to dashboard</a></nav>
-            <h1 style="color: #fd532f;">ISS Tracker</h1>
+            <h1 style="color: #fd532f;">Arni Tracker</h1>
 
             <div class="info-box">
                 <h2>Keplerian Elements</h2>
