--- a/views/todo.ejs
+++ b/views/todo.ejs
@@ -1,80 +1,85 @@
 <% layout('layout') -%>
-    <%- include ./components/navLanding %>
+<%- include ./components/navLanding %>
+
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/notyf@3/notyf.min.css">
+
 <style>
-
-.tasks{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    flex-wrap: wrap;
-    justify-content: center;
-    width: 80vw;
-    gap:5.5%
-}
-
-.task{
-    margin-top: 5vw;
-    display: flex;
-    flex-direction: column;
-    height: 15vh;
-    gap: 2vh;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    width: 23%;
-    border: 1px solid white;
-    padding: 10px;
-    border-radius: 15px;
-}
-
-.bttn{
-    width: 50%;
-    border-radius: 7px ;
-    background-color: #fd532d;
-    padding: 10px;
-}
+    body {
+        text-align: left !important;
+    }
+    .tasks {
+        width: 70vw;
+        height: 70vh;
+    }
+    .tasks {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+        gap: 2vw;
+    }
+    .pending {
+        width: 50%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        background: #fd532f;
+        padding: 1.5vw;
+        border-radius: 10px;
+        color: #000;
+    }
+    .completed {
+        width: 50%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        padding: 1.5vw;
+        border: 1px solid #fff;
+        border-radius: 10px;
+    }
+    .pending > p, .completed > p {
+        margin: 0;
+        margin: 1vh 0;
+    }
 </style>
 
 <body>
-    <div class="main">
-        <div class="head">
-
-        </div>
-        <div class="tasks">
-            <% for(let i = 0; i<tasks.length; i++){  const path1= '/spaceguy/tasks/' %>
-                <% if (tasks[i].status == false) { %>
-                    <div class="task">
-                        <span style="color: #fd532d;"><%= tasks[i].task %> <br></span>
-                        <%= tasks[i].taskId %> <br>
-                        <!-- <%= tasks[i].status %> -->
-                        <button class="bttn" onclick="completeTask( '<%= tasks[i].taskId %>' )">marks as done</button>
-                    </div>    
-                <% } %>
+    <h1 style="color: #fd532f;">Your tasks</h1>
+    <div class="tasks">
+        <div class="pending">
+            <h2 style="margin: 0; margin-bottom: 2vh !important;">Pending</h2>
+            <% if (!spaceguy.todo['pending'][0]) { %>
+                <p>Nothing in your inventory today, relax.</p>
+            <% } %>    
+        
+            <% for (let i = 0; i < spaceguy.todo['pending'].length; i++) { %>
+                <p onclick="todoClick('<%= spaceguy.todo.pending[i] %>')"><%= i + 1 %>) <%= spaceguy.todo['pending'][i] %></p>
             <% } %>
         </div>
+        <div class="completed">
+            <h2 style="margin: 0; margin-bottom: 2vh !important;">Completed</h2>
+        
+            <% for (let i = 0; i < spaceguy.todo['completed'].length; i++) { %>
+                <p><%= i + 1 %>) <%= spaceguy.todo['completed'][i] %></p>
+            <% } %>
+        </div>
+        
     </div>
 </body>
+<script src="https://cdn.jsdelivr.net/npm/notyf@3/notyf.min.js"></script>
 
-<script>
-    function completeTask(id){
-        window.location.href=`/spaceguy/todo/${id}`
-        // fetch(`/spaceguy/todo/${id}`, {
-        //     method: 'POST',
-        //     headers: {
-        //         'Content-Type': 'application/json'
-        //     },
-        //     body: JSON.stringify({ taskId: id })
-        // })
-        // .then(response => response.json())
-        // .then(data => {
-        //     if (data.success) {
-        //         alert('Task marked as done!');
-        //     } else {
-        //         alert('Failed to mark the task as done.');
-        //     }
-        // })
-        // .catch(error => {
-        //     console.error('Error:', error);
-        // });
+<script>    
+    var notyf = new Notyf();
+
+    async function todoClick(task) {
+        fetch('/spaceguy/todo/' + task, {
+            method: "POST"
+        }).then((response) => {
+            console.log(response)
+            notyf.success("yay, task completed")
+            setTimeout(() => {
+                window.location.reload()
+            }, 2000);
+        })
     }
 </script>
