--- a/views/tracker.ejs
+++ b/views/tracker.ejs
@@ -253,7 +253,7 @@
             initMap();
             updateISSPosition();
             setInterval(updateISSPosition, 1000);
-            setInterval(fetchTLE, 60 * 60 * 1000); // Refresh TLE every hour
+            setInterval(fetchTLE, 60 * 60 * 1000);
         }
 
         initialize();
