its name is not shambhu

--- a/views/ai.ejs
+++ b/views/ai.ejs
@@ -87,7 +87,7 @@
 
         console.log('button pressed')
         status.innerText = " now awake 🙂"
-        btnText.innerText = "Shambhu is LISTENING"
+        btnText.innerText = "Companion is LISTENING"
         rishit.style.display = "block"
 
         var userSpeech = ''
@@ -95,14 +95,14 @@
             const result = await startSpeechRecognition();
             console.log(result.length)
             if (!result) {
-                return btnText.innerText = `Oops! Shambhu couldn't hear you.`;
+                return btnText.innerText = `Oops! Companion couldn't hear you.`;
             }
             userSpeech = result
             btnText.innerText = `You said: ${result}`;
 
             try {
                 console.log(result)
-                googleKoMaro("You are Shambhu, a virtual AI Companion, who helps an astronaut in maintaining their mental health. Respond to them for whatever they ask for. Here's what they are saying:" + result +"You act like a friend to them. You support them in their tough times. Talk to them as if you're their very own. Also, here's their information: Fname: <%= user.fname %> Lname: <%= user.fname %>. Provide a response in less than 75 words.").then(async response => { // YAHA PE USER SPEACH KI JAGAH TRAINING DATA LIKHDENA SEE SYNAPSE CODE TECHSYNDICATE REPO
+                googleKoMaro("You are a virtual AI Companion, who helps an astronaut in maintaining their mental health. Respond to them for whatever they ask for. Here's what they are saying:" + result +"You act like a friend to them. You support them in their tough times. Talk to them as if you're their very own. Also, here's their information: Fname: <%= user.fname %> Lname: <%= user.fname %>. Provide a response in less than 75 words.").then(async response => { // YAHA PE USER SPEACH KI JAGAH TRAINING DATA LIKHDENA SEE SYNAPSE CODE TECHSYNDICATE REPO
                     console.log(response)
                     if (response.length > 500) {
                         response = response.slice(0, 70)
